# gatherer

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  jenkins.py
cmake/Hunter/: config.cmake
cmake/modules/: SetOpenCVCMakeArgs-android.cmake  SetOpenCVCMakeArgs-iOS.cmake  SetOpenCVCMakeArgs-nix.cmake  SetOpenCVCMakeArgs-nix.sh  SetOpenCVCMakeArgs-osx.cmake  SetOpenCVCMakeArgs-windows.cmake  SetOpenCVCMakeArgs-windows.sh
src/: CMakeLists.txt  sugar.cmake
src/app/: CMakeLists.txt
src/app/camera_test/: CMakeLists.txt  camera_test.cpp
src/app/declarative-camera/: CMakeLists.txt  plist.in  qmlcamera.cpp
src/app/ogles_gpgpu_test/: CMakeLists.txt  GLContextWindow.cpp  GLContextWindow.h  OGLESGPGPUTest.cpp  OGLESGPGPUTest.h  ogles_gpgpu_test.cpp
src/app/opencv-qt-video/: CMakeLists.txt  CMakeLists.txt~  main.cpp
src/app/preview/: CMakeLists.txt  preview.cpp
src/app/preview-qt/: AndroidManifest.xml.in  CMakeLists.txt  OGLESGPGPUTest.cpp  VideoCapture.cpp  VideoCapture.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  window.cpp  window.h
src/app/qmlvideofilter/: AndroidManifest.xml  CMakeLists.txt  CVPixelBufferWrapper.hpp  CVPixelBufferWrapper.mm  EAGLContext.h  EAGLContext.mm  FPSCalculator.cpp  FPSCalculator.hpp  FrameHandler.cpp  FrameHandler.h  InfoFilter.cpp  InfoFilter.hpp  InfoFilterResult.hpp  InfoFilterRunnable.cpp  InfoFilterRunnable.hpp  OGLESGPGPUTest.cpp  OGLESGPGPUTest.h  QTRenderGL.cpp  QTRenderGL.hpp  QVideoFrameScopeMap.h  TextureBuffer.hpp  VideoFilter.cpp  VideoFilter.hpp  VideoFilterRunnable.cpp  VideoFilterRunnable.hpp  main.cpp  main.qml
src/app/qt-camera/: CMakeLists.txt  main.cpp  plist.in
src/app/qt-camera-demo/: CMakeLists.txt  README.md
src/app/qt-camera-demo/doc/diagrams/: diagrams.zargo
src/app/qt-camera-demo/src/: activationeventfilter.cpp  activationeventfilter.h  applicationactivationlistener.cpp  applicationactivationlistener.h  customcamera.cpp  customcamera.h  histogram.h  main.cpp  performancemeter.cpp  performancemeter.h  profilingdata.h  qtcamerademo.pro  videosurface.cpp  videosurface.h  volumekeys.cpp  volumekeys.h
src/app/qt-camera-demo/src/camerakeylistener/: camerakeylistener.cpp  camerakeylistener.h  camerakeylistener.pri
src/app/qt-camera-demo/src/qml/symbian/: CameraView.qml  CaptureModeSelector.qml  Constants.js  CustomButton.qml  ExposureModeSelector.qml  FPSSelector.qml  FlashSelector.qml  InfoView.qml  IsoSelector.qml  Main.qml  MuteSelector.qml  SettingsView.qml  VideoResolutionSelector.qml  WhiteBalanceSelector.qml
src/app/thread-pool/: CMakeLists.txt  test-thread-pool.cpp
src/lib/: CMakeLists.txt  sugar.cmake
src/lib/OGLESGPGPUTest/: CMakeLists.txt  OGLESGPGPUTest.cpp  OGLESGPGPUTest.h
src/lib/camera/: gatherer_camera.h
src/lib/graphics/: GLExtra.cpp  GLExtra.h  GLSLShaderProgram.cpp  GLSLShaderProgram.h  GLTexture.h  GLWarpShader.cpp  GLWarpShader.h  Logger.cpp  Logger.h  RenderTexture.cpp  RenderTexture.h  RenderTextureCopy.cpp  RenderTextureCopy.h  gatherer_graphics.h  sugar.cmake
src/tests/: CMakeLists.txt
src/tests/compute/: CMakeLists.txt  example.cpp  test-compute.cpp
src/tests/ogles_gpgpu/: CMakeLists.txt  test-ogles-gpgpu.cpp  test-shader.cpp
src/tests/qt_ogles_gpgpu/: CMakeLists.txt  QGLContext.cpp  QGLContext.h  qt_ogles_gpgpu.cpp  test-shader.cpp
